--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,6 @@
 [submodule "level_01/1-libft_42"]
 	path = level_01/1-libft_42
 	url = https://github.com/Thomerlin/1-libft_42.git
-[submodule "level_00/basecamp_42SP"]
-	path = level_00/basecamp_42SP
-	url = https://github.com/Thomerlin/basecamp_42SP.git
 [submodule "level_02/7-push_swap_42"]
 	path = level_02/7-push_swap_42
 	url = git@github.com:Thomerlin/7-push_swap_42.git
@@ -22,3 +19,6 @@
 [submodule "level_01/6-minitalk_42"]
 	path = level_01/6-minitalk_42
 	url = git@github.com:Thomerlin/6-minitalk_42.git
+[submodule "level_00/00-basecamp_42SP"]
+	path = level_00/00-basecamp_42SP
+	url = git@github.com:Thomerlin/00-basecamp_42SP.git
